--- a/LocationDemo/HomeViewController/HomeViewController.xib
+++ b/LocationDemo/HomeViewController/HomeViewController.xib
@@ -9,7 +9,7 @@
             <connections>
                 <outlet property="latitudeLabel" destination="wQ5-Mh-nry" id="r8c-SZ-GZp"/>
                 <outlet property="longitudeLabel" destination="Ohd-Uf-5y2" id="Q49-NT-TPg"/>
-                <outlet property="map" destination="R0L-02-6xm" id="hCl-ic-oxR"/>
+                <outlet property="mapView" destination="R0L-02-6xm" id="YcI-SL-dE9"/>
                 <outlet property="streetLabel" destination="3g8-wC-LAP" id="clY-yf-kgK"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
